--- a/LangGraph/workflows/pydantic.ipynb
+++ b/LangGraph/workflows/pydantic.ipynb
@@ -725,7 +725,7 @@
     "\n",
     "def assign_workers(state: State):\n",
     "    \"\"\"Assign a worker to each section in the plan\"\"\"\n",
-    "    print(f\"Assigning workers for {len(state['sections'])} sections\")\n",
+    "    print(f\"Assigning workers for {len(state['sections'])} sections\")frpm dotenv import load_dotenvfrffffdddssssww\n",
     "    \n",
     "    # Send only the section to each worker\n",
     "    # The worker state is separate from the main state\n",
