--- a/LangGraph/workflows/personal_assistant.ipynb
+++ b/LangGraph/workflows/personal_assistant.ipynb
@@ -6,7 +6,289 @@
    "id": "46d9c06e",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "import os\n",
+    "from dotenv import load_dotenv\n",
+    "load_dotenv()\n",
+    "from langchain_groq import ChatGroq\n",
+    "\n",
+    "os.environ[\"GROQ_API_KEY\"] = os.getenv(\"GROQ_API_KEY\")\n",
+    "\n",
+    "llm = ChatGroq(model = \"qwen-2.5-32b\")\n",
+    "\n",
+    "result = llm.invoke(\"Hello\")\n",
+    "result"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "0ecdcd23",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from typing import List \n",
+    "from typing_extensions import TypedDict\n",
+    "from pydantic import BaseModel\n",
+    "from langchain_core.pydantic_v1 import Field\n",
+    "\n",
+    "class Analyst(BaseModel):\n",
+    "    affiliation: str = Field(\n",
+    "        description = \"primary affiliation of analyst\"\n",
+    "    )\n",
+    "    name:str = Field(\n",
+    "        description = \"Name of the Analyst\"\n",
+    "    )\n",
+    "    role:str = Field(\n",
+    "        description = \"Role of the analyst in the context of topic\"\n",
+    "    )\n",
+    "    description:str = Field(\n",
+    "        description=\"Description of the analyst focus,concerns and motives\"\n",
+    "    )\n",
+    "    @property\n",
+    "    def persona(self)->str:\n",
+    "        return f\"Name: {self.name}\\n Role: {self.role}\\n Affiliation: {self.affiliation}\\n Description: {self.description}\\n\"\n",
+    "    \n",
+    "class Perspectives(BaseModel):\n",
+    "    analysts: List[Analyst] = Field(\n",
+    "        description = \"Comprehensive list of analysts with their roles and affiliations\"\n",
+    "    )\n",
+    "\n",
+    "class GenerateAnalystsState(TypedDict):\n",
+    "    topic:str\n",
+    "    max_analysts:str\n",
+    "    human_analyst_feedback:str\n",
+    "    analysts: List[Analyst]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "cc790430",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from IPython.display import Image,display\n",
+    "from langgraph.graph import StateGraph,START,END\n",
+    "from langgraph.checkpoint.memory import MemorySaver\n",
+    "from langchain_core.messages import AIMessage,HumanMessage,SystemMessage\n",
+    "\n",
+    "analyst_instructions = \"\"\" \n",
+    "\n",
+    "  You are tasked with creating a set of AI analyst personas. Follow these instructions carefully:\n",
+    "\n",
+    "  1. First, review the research topic:\n",
+    "     {topic}\n",
+    "\n",
+    "  2. Examine any editorial feedback that has been optionally provided to guide creation of analysts:\n",
+    "     {human_analyst_feedback}\n",
+    "\n",
+    "  3. Determine the most interesting themes based up on documents and/or feedback above.\n",
+    "     \n",
+    "  4. Pick the top {max_analysts} themes.\n",
+    "\n",
+    "  5. Assign one analyst to each theme.\n",
+    "\n",
+    "\"\"\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "2ba19c63",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def create_analysts(state:GenerateAnalystsState):\n",
+    "    \"\"\"create analysts\"\"\"\n",
+    "\n",
+    "    topic = state[\"topic\"]\n",
+    "    max_analysts = state[\"max_analysts\"]\n",
+    "    human_analyst_feedback = state.get(\"human_analyst_feedback\",\"\")\n",
+    "\n",
+    "    # Enforce structured output\n",
+    "    structured_llm = llm.with_structured_output(Perspectives)\n",
+    "\n",
+    "    # system message\n",
+    "    system_message = analyst_instructions.format(topic=topic,\n",
+    "                                                 max_analysts=max_analysts,\n",
+    "                                                 human_analyst_feedback=human_analyst_feedback)\n",
+    "    \n",
+    "    analysts = structured_llm.invoke([SystemMessage(content=system_message)]+[HumanMessage(content = \"Generate the set of analysts\")])\n",
+    "\n",
+    "    return {\"analysts\": analysts.analysts}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e6ad0143",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def human_feedback(state:GenerateAnalystsState):\n",
+    "    \"\"\"No-op node that should be interrupted on\"\"\"\n",
+    "    pass"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "fa1fe891",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def should_continue(state:GenerateAnalystsState):\n",
+    "    \"\"\"Return the next node to execute\"\"\"\n",
+    "\n",
+    "    #check if human feedback\n",
+    "    human_analyst_feedback = state.get(\"human_analyst_feedback\",None)\n",
+    "\n",
+    "    if human_analyst_feedback:\n",
+    "        return \"create_analysts\"\n",
+    "    \n",
+    "    return END"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "3e856ca8",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Add nodes and edges\n",
+    "builder = StateGraph(GenerateAnalystsState)\n",
+    "\n",
+    "builder.add_node(\"create_analysts\",create_analysts)\n",
+    "builder.add_node(\"human_feedback\",human_feedback)\n",
+    "builder.add_edge(START,\"create_analysts\")\n",
+    "builder.add_edge(\"create_analysts\",\"human_feedback\")\n",
+    "builder.add_conditional_edges(\"human_feedback\",\n",
+    "                              should_continue,\n",
+    "                              [\"create_analysts\",END]\n",
+    "                              )\n",
+    "memory = MemorySaver()\n",
+    "\n",
+    "graph = builder.compile(checkpointer=memory,interrupt_before=[\"human_feedback\"])\n",
+    "\n",
+    "display(Image(graph.get_graph().draw_mermaid_png()))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "8be1c960",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Input\n",
+    "max_analysts = 3\n",
+    "topic = \"The benefits of adopting LangGraph as an agent framework\"\n",
+    "thread = {\"configurable\":{\"thread_id\":1}}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ca122f08",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for event in graph.stream({\"topic\":topic,\"max_analysts\":max_analysts},thread,stream_mode=\"values\"):\n",
+    "    analysts = event.get(\"analysts\",\"\")\n",
+    "    if analysts:\n",
+    "        for analyst in analysts:\n",
+    "            print(f\"Name: {analyst.name}\")\n",
+    "            print(f\"Affiliation: {analyst.affiliation}\")\n",
+    "            print(f\"Role: {analyst.role}\")\n",
+    "            print(f\"Description: {analyst.description}\")\n",
+    "            print(\"-\"*50)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "0c95d41a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "state = graph.get_state(thread)\n",
+    "state.next"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "488af916",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "graph.update_state(thread,{\"human_analyst_feedback\":\"Add in someone from a startup to add an enterpreneur perspective\"},as_node=\"human_feedback\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e2637473",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for event in graph.stream(None,thread,stream_mode=\"values\"):\n",
+    "    analysts = event.get(\"analysts\",\"\")\n",
+    "    if analysts:\n",
+    "        for analyst in analysts:\n",
+    "            print(f\"Name: {analyst.name}\")\n",
+    "            print(f\"Affiliation: {analyst.affiliation}\")\n",
+    "            print(f\"Role: {analyst.role}\")\n",
+    "            print(f\"Description: {analyst.description}\")\n",
+    "            print(\"-\"*50)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "4351087a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "further_feedback = None \n",
+    "graph.update_state(thread,{\"human_analyst_feedback\":further_feedback},as_node=\"human_feedback\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "adda26c5",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for event in graph.stream(None,thread,stream_mode=\"updates\"):\n",
+    "    print(\"--Node--\")\n",
+    "    node_name = next(iter(event.keys()))\n",
+    "    print(node_name)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b4bfe6b7",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "final_state = graph.get_state(thread)\n",
+    "analysts = final_state.values.get(\"analysts\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "6b7d58df",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "analysts"
+   ]
   }
  ],
  "metadata": {
